Remove position relative from navEl wrapper to fix navbar visibility

--- a/frontend_beyond_detail/src/App.scss
+++ b/frontend_beyond_detail/src/App.scss
@@ -224,7 +224,6 @@
 }
 
 .navEl {
-  position: relative;
   z-index: 100;
   margin: 0;
 }
